# my_a-soul_nonebot

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker_normal/: Dockerfile
docker_slim/: Dockerfile
src/: bot.py
src/plugins/app_link/: __init__.py
src/plugins/haruka_bot/: version.py
src/plugins/haruka_bot/plugins/: auto_agree.py  auto_delete.py
src/plugins/haruka_bot/plugins/at/: at_off.py  at_on.py
src/plugins/haruka_bot/plugins/dynamic/: dynamic_off.py  dynamic_on.py
src/plugins/haruka_bot/plugins/live/: live_off.py  live_on.py
src/plugins/haruka_bot/plugins/permission/: permission_off.py  permission_on.py
src/plugins/haruka_bot/plugins/pusher/: dynamic_pusher.py  live_pusher.py
src/plugins/haruka_bot/plugins/sub/: add_sub.py  delete_sub.py  sub_list.py
src/plugins/haruka_bot/utils/: __init__.py  adapter_interface.py  compatible.py
