[tool.poetry]
name = "asbot_new"
version = "0.3.0"
description = "my new asoul bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "2.0.0b5"
nonebot-adapter-mirai2 = "0.0.15"
nonebot-adapter-telegram = "^0.1.0b1"
requests = "^2.25"
# haruka start
click = "^8.0.4"
httpx = "^0.23.0"
nonebot-plugin-apscheduler = "^0.1.4"
playwright = "^1.22.0"
pydantic = "^1.9.0"
python-dotenv = ">=0.19.2,<0.21.0"
tortoise-orm = {extras = ["asyncpg"], version = ">=0.18.1,<0.20.0"}
aerich = "^0.6.3"
bilireq = "^0.2.1"
packaging = "^21.3"
# haruka end

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
